# config-file

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  codecov.yml  pyproject.toml  tox.ini
.github/workflows/: publish_to_pypi.yml  python-package-ci.yml  python-publish.yml  python-security.yml
config_file/: __init__.py  abstract_parser.py  base_parser.py  config_file.py  config_file_path.py  default.py  exceptions.py  ini_parser.py  json_parser.py  nested_lookup.py  toml_parser.py  utils.py  yaml_parser.py
config_file/nested_lookup/: __init__.py  lookup_api.py  nested_lookup.py
config_file/parsers/: __init__.py  abstract_parser.py  base_parser.py  ini_parser.py  ini_parser_compat.py  json_parser.py  parse_value.py  toml_parser.py  yaml_parser.py
docs/source/: conf.py  getting-started.rst  index.rst
tests/: conftest.py  test_abstract_parser.py  test_base_parser.py  test_config_file.py  test_config_file_path.py  test_custom_parser_with_config_file.py  test_ini_parser.py  test_json_parser.py  test_lookup_api.py  test_nested_lookup.py  test_parse_value.py  test_toml_parser.py  test_utils.py  test_yaml_parser.py
tests/templates/ini/: all_strings.ini  default.ini  invalid.ini
tests/templates/json/: all_strings.json  default.json  glossary.json  invalid.json
tests/templates/toml/: all_strings.toml  default.toml  invalid.toml
tests/templates/yaml/: all_strings.yaml  default.yaml  invalid.yaml
