[tool.poetry]
name = "config_file"
version = "0.10.0"
description = "Manage your configuration files."
authors = ["Eugene Triguba <eugenetriguba@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eugenetriguba/config_file"
keywords = ["configuration", "config file", "ini", "json", "toml", "yaml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.taskipy.tasks]
test = "poetry run pytest -v --cov=config_file/ --cov-report term-missing tests/"

[tool.poetry.dependencies]
python = "^3.6"
nested-lookup = "^0.2.19"
toml = { version = "^0.10.0", optional = true }
pyyaml = { version = "^5.3.1", optional = true }

[tool.poetry.extras]
toml = ["toml"]
yaml = ["pyyaml"]

[tool.poetry.dev-dependencies]
pre-commit = "^1.20"
autoflake = "^1.3.1"
isort = "^4.3.21"
seed-isort-config = "^1.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"
taskipy = "^1.2.1"
bump2version = "^1.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["nested_lookup", "pytest"]
known_first_party = ["config_file"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
