[tool.poetry]
name = "config_file"
version = "0.12.0"
description = "Modify configuration files of various formats with the same simple API."
authors = ["Eugene Triguba <eugenetriguba@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eugenetriguba/config_file"
documentation = "https://config-file.readthedocs.io/"
keywords = ["configuration", "ini", "json", "toml", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "config_file" },
    { include = "tests", format = "sdist" }
]

[tool.taskipy.tasks]
test = "task test_cov -- --cov-report term-missing"
test_cov = "task pytest -- --cov=config_file/"
test_ci = "task test_cov -- --cov-report=xml"
lint = "task lint_types && task lint_precommit"
lint_types = "poetry run mypy config_file/ tests/"
lint_precommit = "poetry run pre-commit run --all"
pytest = "poetry run pytest tests/"

[tool.poetry.dependencies]
python = "^3.6"
tomlkit = { version = "^0.6.0", optional = true }
"ruamel.yaml" = { version = "^0.16.10", optional = true }

[tool.poetry.extras]
toml = ["tomlkit"]
yaml = ["ruamel.yaml"]

[tool.poetry.dev-dependencies]
pre-commit = "^1.20"
autoflake = "^1.3.1"
isort = "^4.3.21"
seed-isort-config = { version = "^2.1.1", python = "^3.6.1" }
pytest = "^6.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.3"
taskipy = "^1.2.1"
bump2version = "^1.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.782"

[tool.black]
target_version = ['py36']
include = '\.pyi?$'

[tool.isort]
profile = "black"
known_third_party = ["pytest"]
known_first_party = ["config_file"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
