[tool.poetry]
name = "config_file"
version = "0.13.0"
description = "Modify configuration files of various formats with the same simple API."
authors = ["Eugene Triguba <eugenetriguba@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eugenetriguba/config_file"
documentation = "https://config-file.readthedocs.io/"
keywords = ["configuration", "ini", "json", "toml", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "config_file" },
    { include = "tests", format = "sdist" }
]

[tool.taskipy.tasks]
test = "task test_cov -- --cov-report term-missing"
test_cov = "task pytest -- --cov=config_file/"
lint = "task lint_types && task lint_precommit"
lint_types = "poetry run mypy config_file/ tests/"
lint_precommit = "poetry run pre-commit run --all"
pytest = "poetry run pytest tests/"

[tool.poetry.dependencies]
python = "^3.6"
tomlkit = [
    { version = "0.7.2", python = ">=3.6,<3.7", optional = true },
    { version = "^0.12.2", python = ">=3.7,<4", optional = true }
]
"ruamel.yaml" = { version = "^0.17.16", optional = true }

[tool.poetry.extras]
toml = ["tomlkit"]
yaml = ["ruamel.yaml"]

[tool.poetry.dev-dependencies]
pre-commit = { version = "^2.1", python = "^3.6.1" }
autoflake = "^1.3.1"
isort = "^5.6.4"
seed-isort-config = { version = "^2.1.1", python = "^3.6.1" }
pytest = [
    { version = "^6.0.0", python = ">=3.6,<3.7" },
    { version = "^7", python = ">=3.7,<4.0" }
]
pytest-cov = [
    { version = "^2.8.1", python = ">=3.6,<3.7" },
    { version = "^4", python = ">=3.7,<4.0" }
]
pytest-sugar = [
    { version = "^0.9.3", python = ">=3.6,<3.7" },
    { version = "^0.9.7", python = ">=3.7,<4.0" }
]
taskipy = "^1.2.1"
bump2version = "^1.0.0"
flake8 = "^3.7.9"
black = "^20.8b1"
mypy = [
    { version = "^0.971", python = ">=3.6,<3.8" },
    { version = "^1.6", python = "^3.8"}
]

[tool.black]
target_version = ['py36']
include = '\.pyi?$'

[tool.isort]
profile = "black"
known_third_party = ["pytest"]
known_first_party = ["config_file"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
